--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <title>fcd</title>
   <link rel="stylesheet" href="assets/css/styles.css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script>
+    WebFont.load({
+      google: {
+        families: ['Open Sans']
+      }
+    });
+  </script>
 </head>
 
 <body class='p-home'>
