--- a/app/index.html
+++ b/app/index.html
@@ -34,10 +34,10 @@
       </div>
 
       <!-- logo -->
-      <img src="assets/images/logoH.png" alt="" class="b-header__logo" />
+      <img src="assets/images/logoH.png" alt="" class="c-logo" />
 
       <!-- Search -->
-      <form id="" class="c-search c-search--modified" action="" method="" novalidate="">
+      <form id="" class="c-search" action="" method="" novalidate="">
         <fieldset class="c-search__content">
           <div class="c-search__block">
             <span class="c-search__icon icon--search"></span>
@@ -47,7 +47,7 @@
       </form>
 
       <!-- Socials -->
-      <div class="c-soc-header c-soc-header--modified">
+      <div class="c-soc-header">
         <a href="" class="c-soc-header__item"><span class="icon--twitter"></span></a>
         <a href="" class="c-soc-header__item"><span class="icon--facebook"></span></a>
         <a href="" class="c-soc-header__item"><span class="icon--youtube"></span></a>
@@ -70,7 +70,7 @@
         </div>
 
         <!-- logo -->
-        <img src="assets/images/logoH.png" alt="" class="b-header__logo" />
+        <img src="assets/images/logoH.png" alt="" class="c-logo" />
 
       </div>
 
@@ -134,14 +134,111 @@
 
   <!-- l-main / Main Content -->
   <main class="l-main">
-    <!-- <div class="icon--close"></div> -->
-    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores doloribus magnam error ut cum totam modi suscipit asperiores a quam corporis, numquam ex beatae, praesentium recusandae voluptatibus animi? Vero, fuga.</h1>
-    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores doloribus magnam error ut cum totam modi suscipit asperiores a quam corporis, numquam ex beatae, praesentium recusandae voluptatibus animi? Vero, fuga.</h1>
-    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores doloribus magnam error ut cum totam modi suscipit asperiores a quam corporis, numquam ex beatae, praesentium recusandae voluptatibus animi? Vero, fuga.</h1>
-    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores doloribus magnam error ut cum totam modi suscipit asperiores a quam corporis, numquam ex beatae, praesentium recusandae voluptatibus animi? Vero, fuga.</h1>
-    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores doloribus magnam error ut cum totam modi suscipit asperiores a quam corporis, numquam ex beatae, praesentium recusandae voluptatibus animi? Vero, fuga.</h1>
-    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores doloribus magnam error ut cum totam modi suscipit asperiores a quam corporis, numquam ex beatae, praesentium recusandae voluptatibus animi? Vero, fuga.</h1>
-    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/SGSCJ873RS8" frameborder="0" allowfullscreen></iframe> -->
+
+    <!-- B-PROGRAM -->
+    <section class="b-program">
+
+      <!-- Wrapper -->
+      <div class="l-content">
+
+        <!-- Articles -->
+        <div class="l-d l-t l-p--modified">
+          <article class="c-program">
+            <div class="c-program__media">
+              <img src="http://placehold.it/313x484" alt="" class="c-program__image">
+            </div>
+            <div class="c-program__content">
+              <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
+              <h3 class="c-program__title">
+                <a href="/">En École d'archite-cture</a>
+              </h3>
+            </div>
+          </article>
+        </div>
+
+      </div>
+
+    </section>
+
+
+    <!-- B-RELATED -->
+    <section class="b-related">
+
+      <!-- Wrapper -->
+      <div class="l-content">
+
+        <!-- Title -->
+        <div class="l-d l-t l-p">
+          <h2 class="b-related__title">
+            <span class="b-related__title--small">Actualités de la</span>
+            Fondation Culture & Diversité
+          </h2>
+        </div>
+
+        <!-- Articles -->
+        <div class="l-d l-t l-p--modified">
+          <section class="c-media-list b-related__slider">
+            <article class="c-media">
+              <div class="c-media__media">
+                <img src="http://placehold.it/312x217" alt="" class="c-media__image">
+              </div>
+              <div class="c-media__content">
+                <p class="c-media__date">09 Janvier 2017</p>
+                <h3 class="c-media__title">
+                  <a href="/">Visite de l’Ecole Duperré par le collège Guillaume Budé dans le cadre du programme Egalité des Chances en Ecole d’arts appliqués</a>
+                </h3>
+                <p class="c-media__intro">Ce lundi 9 janvier, les élèves de quatrième du collège Guillaume Budé</p>
+              </div>
+            </article>
+            <article class="c-media">
+              <div class="c-media__media">
+                <img src="http://placehold.it/312x217" alt="" class="c-media__image">
+              </div>
+              <div class="c-media__content">
+                <p class="c-media__date">09 Janvier 2017</p>
+                <h3 class="c-media__title">
+                  <a href="/">Visite de l’Ecole Duperré par le collège Guillaume Budé dans le cadre du programme Egalité des Chances en Ecole d’arts appliqués</a>
+                </h3>
+                <p class="c-media__intro">Ce lundi 9 janvier, les élèves de quatrième du collège Guillaume Budé</p>
+              </div>
+            </article>
+            <article class="c-media">
+              <div class="c-media__media">
+                <img src="http://placehold.it/312x217" alt="" class="c-media__image">
+              </div>
+              <div class="c-media__content">
+                <p class="c-media__date">09 Janvier 2017</p>
+                <h3 class="c-media__title">
+                  <a href="/">Visite de l’Ecole Duperré par le collège Guillaume Budé dans le cadre du programme Egalité des Chances en Ecole d’arts appliqués</a>
+                </h3>
+                <p class="c-media__intro">Ce lundi 9 janvier, les élèves de quatrième du collège Guillaume Budé</p>
+              </div>
+            </article>
+            <article class="c-media">
+              <div class="c-media__media">
+                <img src="http://placehold.it/312x217" alt="" class="c-media__image">
+              </div>
+              <div class="c-media__content">
+                <p class="c-media__date">09 Janvier 2017</p>
+                <h3 class="c-media__title">
+                  <a href="/">Visite de l’Ecole Duperré par le collège Guillaume Budé dans le cadre du programme Egalité des Chances en Ecole d’arts appliqués</a>
+                </h3>
+                <p class="c-media__intro">Ce lundi 9 janvier, les élèves de quatrième du collège Guillaume Budé</p>
+              </div>
+            </article>
+          </section>
+        </div>
+
+        <!-- Button -->
+        <div class="l-d l-t l-p">
+          <button class="c-btn b-related__btn">Toutes les actualités</button>
+        </div>
+
+      </div>
+
+    </section>
+
+
   </main>
   <!-- End l-main / Main Content -->
 
@@ -153,7 +250,7 @@
       <div class="l-d l-t l-p">
 
         <!-- logo -->
-        <img src="assets/images/logoF.png" alt="" class="b-footer__logo" />
+        <img src="assets/images/logoF.png" alt="" class="c-logo" />
 
         <!-- Navigation -->
         <nav class="c-nav-footer">
@@ -195,6 +292,7 @@
 </body>
 <!-- <script type="text/javascript" src="assets/js/main.min.js"></script> -->
 <script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 
 </html>
