related && program blocks

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
       </div>
 
       <!-- logo -->
-      <img src="assets/images/logoH.png" alt="" class="c-logo" />
+      <img src="assets/images/logo-main.svg" alt="" class="c-logo" />
 
       <!-- Search -->
       <form id="" class="c-search" action="" method="" novalidate="">
@@ -70,7 +70,7 @@
         </div>
 
         <!-- logo -->
-        <img src="assets/images/logoH.png" alt="" class="c-logo" />
+        <img src="assets/images/logo-main.svg" alt="" class="c-logo" />
 
       </div>
 
@@ -135,31 +135,165 @@
   <!-- l-main / Main Content -->
   <main class="l-main">
 
+    
+
     <!-- B-PROGRAM -->
     <section class="b-program">
 
       <!-- Wrapper -->
       <div class="l-content">
 
-        <!-- Articles -->
         <div class="l-d l-t l-p--modified">
-          <article class="c-program">
-            <div class="c-program__media">
-              <img src="http://placehold.it/313x484" alt="" class="c-program__image">
-            </div>
-            <div class="c-program__content">
-              <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
-              <h3 class="c-program__title">
-                <a href="/">En École d'archite-cture</a>
-              </h3>
-            </div>
-          </article>
+
+          <!-- Title -->
+          <div class="b-program__head">
+            <h3 class="b-program__subtitle">En amont des études</h3>
+            <h2 class="b-program__title">Programmes d’accès aux grandes Ecoles</h2>
+            <p class="b-program__intro">Les 12 programmes Egalité des Chances ont pour objectif d’informer les jeunes de milieux modestes sur les études supérieures culturelles et artistiques et de les aider à préparer les concours d’entrée des grandes Ecoles de la Culture.</p>
+          </div>
+
+          <!-- Articles -->
+          <section class="c-program-list b-program__slider">
+            <article class="c-program">
+              <div class="c-program__media">
+                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
+              </div>
+              <div class="c-program__content">
+                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
+                <h3 class="c-program__title">
+                  <a href="/">En École d'archite-cture</a>
+                </h3>
+              </div>
+            </article>
+            <article class="c-program">
+              <div class="c-program__media">
+                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
+              </div>
+              <div class="c-program__content">
+                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
+                <h3 class="c-program__title">
+                  <a href="/">En École d'archite-cture</a>
+                </h3>
+              </div>
+            </article>
+            <article class="c-program">
+              <div class="c-program__media">
+                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
+              </div>
+              <div class="c-program__content">
+                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
+                <h3 class="c-program__title">
+                  <a href="/">En École d'archite-cture</a>
+                </h3>
+              </div>
+            </article>
+            <article class="c-program">
+              <div class="c-program__media">
+                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
+              </div>
+              <div class="c-program__content">
+                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
+                <h3 class="c-program__title">
+                  <a href="/">En École d'archite-cture</a>
+                </h3>
+              </div>
+            </article>
+            <article class="c-program">
+              <div class="c-program__media">
+                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
+              </div>
+              <div class="c-program__content">
+                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
+                <h3 class="c-program__title">
+                  <a href="/">En École d'archite-cture</a>
+                </h3>
+              </div>
+            </article>
+            <article class="c-program">
+              <div class="c-program__media">
+                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
+              </div>
+              <div class="c-program__content">
+                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
+                <h3 class="c-program__title">
+                  <a href="/">En École d'archite-cture</a>
+                </h3>
+              </div>
+            </article>
+            <article class="c-program">
+              <div class="c-program__media">
+                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
+              </div>
+              <div class="c-program__content">
+                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
+                <h3 class="c-program__title">
+                  <a href="/">En École d'archite-cture</a>
+                </h3>
+              </div>
+            </article>
+          </section>
         </div>
 
       </div>
 
     </section>
 
+    <!-- B-PROGRAM -->
+    <section class="b-program">
+
+      <!-- Wrapper -->
+      <div class="l-content">
+
+        <div class="l-d l-t l-p--modified">
+
+          <!-- Title -->
+          <div class="b-program__head">
+            <h3 class="b-program__subtitle">En amont des études</h3>
+            <h2 class="b-program__title">Programmes d’accès aux grandes Ecoles</h2>
+            <p class="b-program__intro">Les 12 programmes Egalité des Chances ont pour objectif d’informer les jeunes de milieux modestes sur les études supérieures culturelles et artistiques et de les aider à préparer les concours d’entrée des grandes Ecoles de la Culture.</p>
+          </div>
+
+          <!-- Articles -->
+          <section class="c-program-list b-program__slider">
+            <article class="c-program">
+              <div class="c-program__media">
+                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
+              </div>
+              <div class="c-program__content">
+                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
+                <h3 class="c-program__title">
+                  <a href="/">En École d'archite-cture</a>
+                </h3>
+              </div>
+            </article>
+            <article class="c-program">
+              <div class="c-program__media">
+                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
+              </div>
+              <div class="c-program__content">
+                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
+                <h3 class="c-program__title">
+                  <a href="/">En École d'archite-cture</a>
+                </h3>
+              </div>
+            </article>
+            <article class="c-program">
+              <div class="c-program__media">
+                <img src="http://placehold.it/314x484" alt="" class="c-program__image">
+              </div>
+              <div class="c-program__content">
+                <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
+                <h3 class="c-program__title">
+                  <a href="/">En École d'archite-cture</a>
+                </h3>
+              </div>
+            </article>
+          </section>
+        </div>
+
+      </div>
+
+    </section>
 
     <!-- B-RELATED -->
     <section class="b-related">
@@ -238,7 +372,6 @@
 
     </section>
 
-
   </main>
   <!-- End l-main / Main Content -->
 
@@ -250,7 +383,7 @@
       <div class="l-d l-t l-p">
 
         <!-- logo -->
-        <img src="assets/images/logoF.png" alt="" class="c-logo" />
+        <img src="assets/images/logo-secondary.svg" alt="" class="c-logo" />
 
         <!-- Navigation -->
         <nav class="c-nav-footer">
