Sliders: partner, video, je'm Oriente; Youtubers Block

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <script>
     WebFont.load({
       google: {
-        families: ['Open Sans']
+        families: ['Open Sans:300,400,700', 'Open Sans Condensed:700']
       }
     });
   </script>
@@ -135,9 +135,277 @@
   <!-- l-main / Main Content -->
   <main class="l-main">
 
-    
+    <!-- b-slider--partners -->
+    <section class="b-slider--partners">
 
-    <!-- B-PROGRAM -->
+      <!-- Wrapper -->
+      <div class="l-content">
+
+        <!-- Title -->
+        <div class="l-d l-t l-p">
+          <h2 class="b-slider--partners__title">Nos partenaires pour ce programme</h2>
+        </div>
+
+        <!-- Articles -->
+        <div class="l-d l-t l-p--modified">
+          <section class="b-slider--partners__slider">
+            <article class="b-slider--partners__slide">
+              <a href="#">
+                <img src="assets/images/p1.png" alt="" class="b-slider--partners__image">
+              </a>
+            </article>
+            <article class="b-slider--partners__slide">
+              <a href="#">
+                <img src="assets/images/p2.png" alt="" class="b-slider--partners__image">
+              </a>
+            </article>
+            <article class="b-slider--partners__slide">
+              <a href="#">
+                <img src="assets/images/p3.png" alt="" class="b-slider--partners__image">
+              </a>
+            </article>
+            <article class="b-slider--partners__slide">
+              <a href="#">
+                <img src="assets/images/p3.png" alt="" class="b-slider--partners__image">
+              </a>
+            </article>
+            <article class="b-slider--partners__slide">
+              <a href="#">
+                <img src="assets/images/p1.png" alt="" class="b-slider--partners__image">
+              </a>
+            </article>
+            <article class="b-slider--partners__slide">
+              <a href="#">
+                <img src="assets/images/p2.png" alt="" class="b-slider--partners__image">
+              </a>
+            </article>
+            <article class="b-slider--partners__slide">
+              <a href="#">
+                <img src="assets/images/p3.png" alt="" class="b-slider--partners__image">
+              </a>
+            </article>
+            <article class="b-slider--partners__slide">
+              <a href="#">
+                <img src="assets/images/p3.png" alt="" class="b-slider--partners__image">
+              </a>
+            </article>
+          </section>
+        </div>
+
+      </div>
+
+    </section>
+
+    <!-- b-slider--video -->
+    <section class="b-slider--video">
+
+      <!-- Wrapper -->
+      <div class="l-content">
+
+        <!-- Title -->
+        <div class="l-d l-t l-p">
+          <h2 class="b-slider--video__title">
+            <span class="b-slider--video__title--small">Pour ce métier</span>
+            <span class="b-slider--video__title--big b-slider--video__title__colorized">quelles écoles ?</span>
+          </h2>
+        </div>
+
+        <!-- Articles -->
+        <div class="l-d l-t l-p--modified">
+          <section class="b-slider--video__slider">
+            <article class="b-slider--video__item">
+              <div class="b-slider--video__item__media">
+                <img src="http://placehold.it/400x229" alt="" class="b-slider--video__item__image">
+              </div>
+              <div class="b-slider--video__item__content">
+                <h3 class="b-slider--video__item__title">
+                  <a href="/">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+                </h3>
+              </div>
+            </article>
+            <article class="b-slider--video__item">
+              <div class="b-slider--video__item__media">
+                <img src="http://placehold.it/400x229" alt="" class="b-slider--video__item__image">
+              </div>
+              <div class="b-slider--video__item__content">
+                <h3 class="b-slider--video__item__title">
+                  <a href="/">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+                </h3>
+              </div>
+            </article>
+            <article class="b-slider--video__item">
+              <div class="b-slider--video__item__media">
+                <img src="http://placehold.it/400x229" alt="" class="b-slider--video__item__image">
+              </div>
+              <div class="b-slider--video__item__content">
+                <h3 class="b-slider--video__item__title">
+                  <a href="/">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+                </h3>
+              </div>
+            </article>
+            <article class="b-slider--video__item">
+              <div class="b-slider--video__item__media">
+                <img src="http://placehold.it/400x229" alt="" class="b-slider--video__item__image">
+              </div>
+              <div class="b-slider--video__item__content">
+                <h3 class="b-slider--video__item__title">
+                  <a href="/">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+                </h3>
+              </div>
+            </article>
+          </section>
+        </div>
+
+        <!-- Button -->
+        <div class="l-d l-t l-p">
+          <a href="" class="c-btn c-btn--video">
+            <span>avoir toutes les vidéos</span>
+          </a>
+        </div>
+
+        <!-- Rotated Title -->
+        <div class="c-rotated-text b-slider--video__rotated">
+          <div class="c-rotated-text__inner">
+            <span class="b-slider--video__rotated__small">Pour ce métier</span>
+            <span class="b-slider--video__rotated__big">quelles écoles ?</span>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
+
+    <!-- b-youtubers block -->
+    <section class="b-youtubers">
+
+      <!-- Wrapper -->
+      <div class="l-content">
+
+        <div class="l-d l-t l-p b-youtubers__wrap">
+
+          <div class="b-youtubers__body">
+
+            <!-- Title -->
+            <h2 class="b-youtubers__title">
+              <span class="b-youtubers__title--small b-youtubers__title--small--first">Les</span>
+              <span class="b-youtubers__title--big">You<span class="b-youtubers__title__colorized">tubeurs</span></span>
+              <span class="b-youtubers__title--small b-youtubers__title--small--second">en parlent...</span>
+            </h2>
+
+            <!-- Article -->
+            <article class="b-youtubers__item">
+              <div class="b-youtubers__item__media">
+                <img src="http://placehold.it/435x245" alt="" class="b-youtubers__item__image">
+              </div>
+              <div class="b-youtubers__item__content">
+                <h3 class="b-youtubers__item__title">
+                  <a href="/">Duplexque isdem diebus acciderat malum set dolor minilest estat</a>
+                </h3>
+              </div>
+            </article>
+
+            <!-- Button -->
+            <a href="" class="c-btn c-btn--video">
+              <span>voir toutes les vidéos</span>
+            </a>
+
+          </div>
+
+        </div>
+
+        <!-- Rotated Title -->
+        <div class="c-rotated-text b-youtubers__rotated">
+          <div class="c-rotated-text__inner">
+            <span class="b-youtubers__rotated__title--small b-youtubers__rotated__title--small--first">Les</span>
+            <span class="b-youtubers__rotated__title--big">Youtubeurs</span>
+            <span class="b-youtubers__rotated__title--small b-youtubers__rotated__title--small--second">en parlent...</span>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
+
+    <!-- b-slider--video -->
+    <section class="b-slider--video">
+
+      <!-- Wrapper -->
+      <div class="l-content">
+
+        <!-- Title -->
+        <div class="l-d l-t l-p">
+          <h2 class="b-slider--video__title">
+            <span class="b-slider--video__title--big">Les métiers </span>
+            <span class="b-slider--video__title--small b-slider--video__title__colorized">de ce domaine artistique</span>
+          </h2>
+        </div>
+
+        <!-- Articles -->
+        <div class="l-d l-t l-p--modified">
+          <section class="b-slider--video__slider">
+            <article class="b-slider--video__item">
+              <div class="b-slider--video__item__media">
+                <img src="http://placehold.it/400x229" alt="" class="b-slider--video__item__image">
+              </div>
+              <div class="b-slider--video__item__content">
+                <h3 class="b-slider--video__item__title">
+                  <a href="/">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+                </h3>
+              </div>
+            </article>
+            <article class="b-slider--video__item">
+              <div class="b-slider--video__item__media">
+                <img src="http://placehold.it/400x229" alt="" class="b-slider--video__item__image">
+              </div>
+              <div class="b-slider--video__item__content">
+                <h3 class="b-slider--video__item__title">
+                  <a href="/">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+                </h3>
+              </div>
+            </article>
+            <article class="b-slider--video__item">
+              <div class="b-slider--video__item__media">
+                <img src="http://placehold.it/400x229" alt="" class="b-slider--video__item__image">
+              </div>
+              <div class="b-slider--video__item__content">
+                <h3 class="b-slider--video__item__title">
+                  <a href="/">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+                </h3>
+              </div>
+            </article>
+            <article class="b-slider--video__item">
+              <div class="b-slider--video__item__media">
+                <img src="http://placehold.it/400x229" alt="" class="b-slider--video__item__image">
+              </div>
+              <div class="b-slider--video__item__content">
+                <h3 class="b-slider--video__item__title">
+                  <a href="/">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+                </h3>
+              </div>
+            </article>
+          </section>
+        </div>
+
+        <!-- Button -->
+        <div class="l-d l-t l-p">
+          <a href="" class="c-btn c-btn--video">
+            <span>voir toutes les vidéos</span>
+          </a>
+        </div>
+
+        <!-- Rotated Title -->
+        <div class="c-rotated-text b-slider--video__rotated">
+          <div class="c-rotated-text__inner">
+            <span class="b-slider--video__rotated__big">Les métiers</span>
+            <span class="b-slider--video__rotated__small">de ce domaine artistique</span>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
+
+    <!-- b-program -->
     <section class="b-program">
 
       <!-- Wrapper -->
@@ -238,7 +506,7 @@
 
     </section>
 
-    <!-- B-PROGRAM -->
+    <!-- b-program -->
     <section class="b-program">
 
       <!-- Wrapper -->
@@ -285,6 +553,59 @@
                 <p class="c-program__type">Programmes d'accès aux  Grandes Ecoles</p>
                 <h3 class="c-program__title">
                   <a href="/">En École d'archite-cture</a>
+                </h3>
+              </div>
+            </article>
+          </section>
+        </div>
+
+      </div>
+
+    </section>
+
+    <!-- b-program--different layout -->
+    <section class="b-program--diff">
+
+      <!-- Wrapper -->
+      <div class="l-content">
+
+        <div class="l-d l-t l-p--modified">
+
+          <!-- Title -->
+          <div class="b-program--diff__head">
+            <h2 class="b-program--diff__title">Les résidences</h2>
+            <p class="b-program--diff__intro">La Fondation Culture & Diversité met en place des résidences de création pour aider de jeunes artistes dans leurs premiers projets professionnels.</p>
+          </div>
+
+          <!-- Articles -->
+          <section class="c-program--diff-list b-program__slider">
+            <article class="c-program--diff">
+              <div class="c-program--diff__media">
+                <img src="http://placehold.it/400x229" alt="" class="c-program--diff__image">
+              </div>
+              <div class="c-program--diff__content">
+                <h3 class="c-program--diff__title">
+                  <a href="/">Voyager pour apprendre les métiers d’arts</a>
+                </h3>
+              </div>
+            </article>
+            <article class="c-program--diff">
+              <div class="c-program--diff__media">
+                <img src="http://placehold.it/400x229" alt="" class="c-program--diff__image">
+              </div>
+              <div class="c-program--diff__content">
+                <h3 class="c-program--diff__title">
+                  <a href="/">La Résidence à La Fémis</a>
+                </h3>
+              </div>
+            </article>
+            <article class="c-program--diff">
+              <div class="c-program--diff__media">
+                <img src="http://placehold.it/400x229" alt="" class="c-program--diff__image">
+              </div>
+              <div class="c-program--diff__content">
+                <h3 class="c-program--diff__title">
+                  <a href="/">La 3e Résidence avec un nom hypothétiquement sur 3 ligne</a>
                 </h3>
               </div>
             </article>
@@ -365,7 +686,9 @@
 
         <!-- Button -->
         <div class="l-d l-t l-p">
-          <button class="c-btn b-related__btn">Toutes les actualités</button>
+          <a href="" class="c-btn b-related__btn">
+            <span>Toutes les actualités</span>
+          </a>
         </div>
 
       </div>
