--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <script>
     WebFont.load({
       google: {
-        families: ['Open Sans:300,400,700', 'Open Sans Condensed:700']
+        families: ['Open Sans:300,400,700', 'Open Sans Condensed:700', 'Cormorant:600i']
       }
     });
   </script>
@@ -134,6 +134,81 @@
 
   <!-- l-main / Main Content -->
   <main class="l-main">
+
+    <!-- b-hero / Hero Block -->
+    <section class="b-hero">
+
+      <!-- Hero Image/Slider -->
+      <div class="b-hero__media">
+        <picture>
+          <!-- Desk img -->
+          <source srcset="http://placehold.it/1600x495" media="(min-width: 1023px)">
+          <!-- Tab img -->
+          <source srcset="http://placehold.it/768x244" media="(min-width: 768px)">
+          <!-- Mob img -->
+          <img srcset="http://placehold.it/750x350" alt="" class="b-hero__image">
+        </picture>
+      </div>
+
+      <!-- Hero Content -->
+      <div class="b-hero__content-wrap">
+
+        <!-- Wrapper -->
+        <div class="l-content">
+          <div class="l-d l-t l-p">
+
+            <div class="b-hero__content">
+              <h1 class="b-hero__title">Cohésion sociale</h1>
+              <p class="b-hero__intro">Les programmes en faveur de la cohésion sociale reposent sur la conviction que le partage de repères culturels et les pratiques artistiques sont des facteurs d’épanouissement de chacun et des outils de promotion et de transformation sociales.</p>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+
+    </section>
+
+    <!-- Download Items Block -->
+    <section class="b-download">
+
+      <!-- Wrapper -->
+      <div class="l-content">
+        <div class="l-d l-t l-p">
+
+          <!-- Download Items -->
+          <div class="b-download__items">
+            <!-- Download Item -->
+            <article class="b-download__item">
+              <a href="" class="b-download__link">
+                <span class="icon icon--arrow-download b-download__icon"></span>
+                <span class="b-download__text">Télécharger le dossier de présentation de l’école</span>
+              </a>
+            </article>
+            <article class="b-download__item">
+              <a href="" class="b-download__link">
+                <span class="icon icon--arrow-download b-download__icon"></span>
+                <span class="b-download__text">Télécharger le dossier de présentation de l’école</span>
+              </a>
+            </article>
+            <article class="b-download__item">
+              <a href="" class="b-download__link">
+                <span class="icon icon--arrow-download b-download__icon"></span>
+                <span class="b-download__text">Télécharger le dossier de présentation de l’école</span>
+              </a>
+            </article>
+            <article class="b-download__item">
+            <a href="" class="b-download__link">
+              <span class="icon icon--arrow-download b-download__icon"></span>
+              <span class="b-download__text">Télécharger le dossier de présentation de l’école</span>
+            </a>
+          </article>
+          </div>
+
+        </div>
+      </div>
+
+    </section>
 
     <!-- b-slider--partners -->
     <section class="b-slider--partners">
@@ -405,8 +480,8 @@
 
     </section>
 
-    <!-- b-program -->
-    <section class="b-program">
+    <!-- program-category -->
+    <section class="program-category">
 
       <!-- Wrapper -->
       <div class="l-content">
@@ -414,14 +489,14 @@
         <div class="l-d l-t l-p--modified">
 
           <!-- Title -->
-          <div class="b-program__head">
-            <h3 class="b-program__subtitle">En amont des études</h3>
-            <h2 class="b-program__title">Programmes d’accès aux grandes Ecoles</h2>
-            <p class="b-program__intro">Les 12 programmes Egalité des Chances ont pour objectif d’informer les jeunes de milieux modestes sur les études supérieures culturelles et artistiques et de les aider à préparer les concours d’entrée des grandes Ecoles de la Culture.</p>
+          <div class="program-category__head">
+            <h3 class="program-category__subtitle">En amont des études</h3>
+            <h2 class="program-category__title">Programmes d’accès aux grandes Ecoles</h2>
+            <p class="program-category__intro">Les 12 programmes Egalité des Chances ont pour objectif d’informer les jeunes de milieux modestes sur les études supérieures culturelles et artistiques et de les aider à préparer les concours d’entrée des grandes Ecoles de la Culture.</p>
           </div>
 
           <!-- Articles -->
-          <section class="c-program-list b-program__slider">
+          <section class="c-program-list program-category__slider">
             <article class="c-program">
               <div class="c-program__media">
                 <img src="http://placehold.it/314x484" alt="" class="c-program__image">
@@ -506,8 +581,8 @@
 
     </section>
 
-    <!-- b-program -->
-    <section class="b-program">
+    <!-- program-category -->
+    <section class="program-category">
 
       <!-- Wrapper -->
       <div class="l-content">
@@ -515,14 +590,14 @@
         <div class="l-d l-t l-p--modified">
 
           <!-- Title -->
-          <div class="b-program__head">
-            <h3 class="b-program__subtitle">En amont des études</h3>
-            <h2 class="b-program__title">Programmes d’accès aux grandes Ecoles</h2>
-            <p class="b-program__intro">Les 12 programmes Egalité des Chances ont pour objectif d’informer les jeunes de milieux modestes sur les études supérieures culturelles et artistiques et de les aider à préparer les concours d’entrée des grandes Ecoles de la Culture.</p>
+          <div class="program-category__head">
+            <h3 class="program-category__subtitle">En amont des études</h3>
+            <h2 class="program-category__title">Programmes d’accès aux grandes Ecoles</h2>
+            <p class="program-category__intro">Les 12 programmes Egalité des Chances ont pour objectif d’informer les jeunes de milieux modestes sur les études supérieures culturelles et artistiques et de les aider à préparer les concours d’entrée des grandes Ecoles de la Culture.</p>
           </div>
 
           <!-- Articles -->
-          <section class="c-program-list b-program__slider">
+          <section class="c-program-list program-category__slider">
             <article class="c-program">
               <div class="c-program__media">
                 <img src="http://placehold.it/314x484" alt="" class="c-program__image">
@@ -563,8 +638,8 @@
 
     </section>
 
-    <!-- b-program--different layout -->
-    <section class="b-program--diff">
+    <!-- program-category--different layout -->
+    <section class="program-category--diff">
 
       <!-- Wrapper -->
       <div class="l-content">
@@ -572,13 +647,13 @@
         <div class="l-d l-t l-p--modified">
 
           <!-- Title -->
-          <div class="b-program--diff__head">
-            <h2 class="b-program--diff__title">Les résidences</h2>
-            <p class="b-program--diff__intro">La Fondation Culture & Diversité met en place des résidences de création pour aider de jeunes artistes dans leurs premiers projets professionnels.</p>
+          <div class="program-category--diff__head">
+            <h2 class="program-category--diff__title">Les résidences</h2>
+            <p class="program-category--diff__intro">La Fondation Culture & Diversité met en place des résidences de création pour aider de jeunes artistes dans leurs premiers projets professionnels.</p>
           </div>
 
           <!-- Articles -->
-          <section class="c-program--diff-list b-program__slider">
+          <section class="c-program--diff-list program-category__slider">
             <article class="c-program--diff">
               <div class="c-program--diff__media">
                 <img src="http://placehold.it/400x229" alt="" class="c-program--diff__image">
@@ -749,6 +824,8 @@
 <!-- <script type="text/javascript" src="assets/js/main.min.js"></script> -->
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+<script type="text/javascript" src="js/diwanee-sticky/diwanee-sticky.js"></script>
+<script type="text/javascript" src="js/picturefill/picturefill.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 
 </html>
