HP newsletter && HP Partners

--- a/app/hp.html
+++ b/app/hp.html
@@ -135,6 +135,27 @@
   <!-- l-main / Main Content -->
   <main class="l-main">
 
+    <!-- HP Newsletter Block -->
+    <section class="hp-partners">
+
+      <!-- Wrapper -->
+      <div class="l-content">
+          <div class="l-d l-t l-p">
+
+              <div class="hp-partners__body">
+                  <!-- Content -->
+                  <h3 class="hp-partners__subtitle">Rien ne serait possible sans nos partenaires</h3>
+                  <h2 class="hp-partners__title">Ministères, institutions, grandes Ecoles de la Culture, structures culturelles, associations, établissements scolaires</h2>
+                  <a href="" class="c-btn hp-partners__btn">
+                      <span>nos partenaires</span>
+                  </a>
+              </div>
+
+          </div>
+      </div>
+
+    </section>
+
     <!-- B-RELATED -->
     <section class="b-related">
 
@@ -214,8 +235,6 @@
 
     </section>
 
-
-
     <!-- HP Newsletter Block -->
     <section class="hp-newsletter">
 
@@ -248,8 +267,6 @@
         </div>
 
     </section>
-
-
 
   </main>
   <!-- End l-main / Main Content -->
