--- a/app/hp.html
+++ b/app/hp.html
@@ -135,8 +135,66 @@
   <!-- l-main / Main Content -->
   <main class="l-main">
 
+    <!-- HP Viewer -->
+    <section class="hp-viewer">
+
+        <!-- HP Viewer Top / Media && Headings -->
+        <div class="hp-viewer__top">
+
+            <!-- Viewer Media -->
+            <div class="hp-viewer__media">
+                <img src="http://placehold.it/1600x828" alt="" class="hp-viewer__media__img">
+            </div>
+
+            <!-- Viewer Headers -->
+            <div class="hp-viewer__headings">
+                <!-- Wrapper -->
+                <div class="l-content">
+                    <div class="l-d l-t l-p">
+
+                        <h3 class="hp-viewer__surtitle">Notre mission</h3>
+                        <h1 class="hp-viewer__title">L’accès aux arts et à la culture pour les jeunes issus de milieux modestes</h1>
+                        <h2 class="hp-viewer__subtitle">Fondation d’entreprise de FIMALAC</h2>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- Viewer Buttons -->
+        <div class="hp-viewer__btns">
+
+            <!-- Wrapper -->
+            <div class="l-content">
+                <div class="l-d l-t">
+
+                    <div class="hp-viewer__btns-wrap">
+
+                        <a href="#section1" class="hp-viewer__btn hp-viewer__btn--primary">
+                            <span class="hp-viewer__btn__text">Égalité des Chances</span>
+                            <div class="icon icon--arrow-dot hp-viewer__btn__dot"></div>
+                        </a>
+                        <a href="#section2" class="hp-viewer__btn hp-viewer__btn--secondary">
+                            <span class="hp-viewer__btn__text">cohésion sociale</span>
+                            <div class="icon icon--arrow-dot hp-viewer__btn__dot"></div>
+                        </a>
+                        <a href="#section3" class="hp-viewer__btn hp-viewer__btn--tertiary">
+                            <span class="hp-viewer__btn__text">Je m’oriente</span>
+                            <div class="icon icon--arrow-dot hp-viewer__btn__dot"></div>
+                        </a>
+
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
     <!-- HP Newsletter Block -->
-    <section class="hp-partners">
+    <section id="section1" class="hp-partners">
 
       <!-- Wrapper -->
       <div class="l-content">
@@ -157,7 +215,7 @@
     </section>
 
     <!-- B-RELATED -->
-    <section class="b-related">
+    <section id="section2" class="b-related">
 
       <!-- Wrapper -->
       <div class="l-content">
@@ -236,7 +294,7 @@
     </section>
 
     <!-- HP Newsletter Block -->
-    <section class="hp-newsletter">
+    <section id="section3" class="hp-newsletter">
 
         <!-- Wrapper -->
         <div class="l-content">
